# microsandbox

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .taplo.toml  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SELF_HOSTING.md  TODO_landing_page.md  USE_CASE.md  deny.toml  docker-compose.yaml  hello.txt  release-please-config.json
.cargo/: config.toml
.github/: CODEOWNERS
.github/vet/: exceptions.yml
.github/workflows/: release.yml  release_docs.yml  release_workers.yml  sdk-python-integration.yml  tests_and_checks.yml
docker/: Dockerfile  README.md  docker-compose.yaml
docs/: index.md  retype.manifest  wrangler.toml
docs/guides/: getting-started.md
docs/references/: cli.md
landing-page/: README.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js
landing-page/public/: robots.txt
landing-page/src/: App.css  App.jsx  App.tsx  index.css
landing-page/src/components/: CTA.tsx  Features.tsx  Footer.jsx  Footer.tsx  Header.jsx  Header.tsx  Hero.tsx  Layout.tsx  SEO.jsx  Testimonials.tsx  UseCases.tsx
landing-page/src/pages/: About.jsx  AboutPage.tsx  Blog.jsx  BlogPage.tsx  BlogPost1.jsx  BlogPost2.jsx  Features.jsx  FeaturesPage.tsx  Home.jsx  HomePage.tsx  Organizations.jsx  OrganizationsPage.tsx  Pricing.jsx  PricingPage.tsx  _document.tsx  about.tsx  features.tsx  get-started.tsx  index.tsx  organizations.tsx  pricing.tsx  sitemap.xml.tsx
landing-page/src/pages/blog/: ai-powered-development-secure-execution.tsx  index.tsx  why-microvm-isolation-matters.tsx
landing-page/src/styles/: globals.css
microsandbox-cli/: Cargo.toml
microsandbox-cli/lib/: error.rs  styles.rs
microsandbox-cli/lib/args/: msb.rs  msbrun.rs  msbserver.rs
microsandbox-core/: Cargo.toml
microsandbox-core/lib/: error.rs  models.rs
microsandbox-core/lib/config/: reference_path.rs
microsandbox-core/lib/config/microsandbox/: builder.rs  config.rs
microsandbox-core/lib/management/: config.rs  db.rs  home.rs  image.rs  menv.rs  mod.rs  orchestra.rs  rootfs.rs  sandbox.rs  toolchain.rs
microsandbox-core/lib/migrations/oci/: 20251117071723_pull_from_any_registry_changes.down.sql  20251117071723_pull_from_any_registry_changes.up.sql
microsandbox-core/lib/migrations/sandbox/: 20250128014823_create_sandboxes.down.sql  20250128014823_create_sandboxes.up.sql
microsandbox-core/lib/oci/: auth.rs  global_cache.rs  image.rs  layer.rs  mocks.rs  mod.rs  pull.rs  reference.rs  registry.rs  tests.rs
microsandbox-core/lib/oci/implementations/: ghcr.rs  mod.rs
microsandbox-core/lib/oci/layer/: extraction.rs  mod.rs  progress.rs
microsandbox-core/lib/runtime/: monitor.rs
microsandbox-core/lib/utils/: conversion.rs
microsandbox-core/lib/vm/: builder.rs  cgroup.rs  ffi.rs  microvm.rs  mod.rs  vm.rs
microsandbox-core/tests/: cgroup_integration.rs  registry_auth_integration.rs
microsandbox-portal/: Cargo.toml
microsandbox-portal/examples/: repl.rs  repl_timer.rs  rpc_command.rs  rpc_repl.rs
microsandbox-portal/lib/: error.rs  handler.rs  route.rs  state.rs
microsandbox-portal/lib/portal/: command.rs  mod.rs
microsandbox-portal/lib/portal/repl/: bun.rs  engine.rs  mod.rs  nodejs.rs  python.rs  types.rs
microsandbox-server/: Cargo.toml
microsandbox-server/lib/: config.rs  error.rs  handler.rs  management.rs  mcp.rs  middleware.rs  payload.rs  port.rs  route.rs  state.rs
microsandbox-utils/: Cargo.toml
microsandbox-utils/lib/: credential_store.rs  defaults.rs  docker_config.rs  env.rs  error.rs  lib.rs  path.rs  registry_auth.rs  term.rs
microsandbox-utils/lib/log/: rotating.rs
microsandbox-utils/lib/runtime/: supervisor.rs
scripts/: build_libkrun.sh  build_sdk_images.sh  install_microsandbox.sh  package_microsandbox.sh  setup_env.sh
scripts/debug/: compare_stat_overrides.sh
sdk/: README.md
sdk-images/bun/: Dockerfile  README.md
sdk/go/: config.go  go.mod  lang.go  msb.go  option.go  rpc_client.go
sdk/go/cmd/command-example/: main.go
sdk/go/cmd/concurrent-example/: main.go
sdk/go/cmd/metrics-example/: main.go
sdk/go/cmd/node-example/: main.go
sdk/go/cmd/repl-example/: main.go
sdk/go/uuid/: uuid.go
sdk/java/: README.md  pom.xml
sdk/java/src/main/java/dev/microsandbox/: BaseSandbox.java  CommandExecution.java  Execution.java  Metrics.java  Microsandbox.java  NodeSandbox.java  PythonSandbox.java
sdk/java/src/main/java/dev/microsandbox/examples/: AdvancedExample.java  CommandExample.java  HelloExample.java  MetricsExample.java  NodeExample.java
sdk/java/src/test/java/dev/microsandbox/: CommandExecutionTest.java  ExecutionTest.java  MetricsTest.java  MicrosandboxTest.java
sdk/javascript/: pnpm-lock.yaml
sdk/javascript/examples/: metrics.ts
sdk/javascript/src/: base-sandbox.ts  bun-sandbox.ts  command.ts  index.ts  metrics.ts  node-sandbox.ts  python-sandbox.ts  types.ts
sdk/python/: pyproject.toml
sdk/python/examples/: metrics.py
sdk/python/microsandbox/: base_sandbox.py  command.py  metrics.py  node_sandbox.py  python_sandbox.py
sdk/rust/: Cargo.toml
sdk/rust/examples/: repl.rs
sdk/rust/src/: base.rs  builder.rs  command.rs  metrics.rs  node.rs  python.rs  start_options.rs
workers/get-microsandbox/src/: index.js
workers/get-msb/: wrangler.toml
