[workspace]
members = [
    "microsandbox-utils",
    "microsandbox-core",
    "microsandbox-portal",
    "microsandbox-server",
    "microsandbox-cli",
]
exclude = ["sdk/rust"]
resolver = "2"

[workspace.package]
authors = ["Team MicroSandbox <team@microsandbox.dev>"]
repository = "https://github.com/microsandbox/microsandbox"
version = "0.2.6"
license = "Apache-2.0"
edition = "2024"

[profile.release]
codegen-units = 1

[workspace.dependencies]
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
dirs = "6.0"
hex = "0.4"
libc = "0.2"
nix = "0.29" # Cannot upgrade to 0.30 because pty no longer works correctly. Yet to investigate properly.
axum = "0.8"
bytes = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structstruck = "0.5"
xattr = "1.3"
sha2 = "0.10"
thiserror = "2.0"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["color", "derive"] }
getset = "0.1"
procspawn = "1.0"
rand = "0.9"
reqwest = { version = "0.12", features = ["stream", "json"] }
reqwest-middleware = "0.3" # Cannot upgrade to 0.4 due to https://github.com/TrueLayer/reqwest-middleware/issues/204
reqwest-retry = "0.6"      # Cannot upgrade to 0.7 due to https://github.com/TrueLayer/reqwest-middleware/issues/204
microsandbox-utils = { version = "0.2.6", path = "./microsandbox-utils" }
microsandbox-core = { version = "0.2.6", path = "./microsandbox-core" }
microsandbox-server = { version = "0.2.6", path = "./microsandbox-server" }
multihash = "0.19"
multihash-codetable = "0.1"
chrono = { version = "0.4", features = ["serde"] }
criterion = "0.5"
tempfile = "3.15"
test-log = "0.2"
typed-path = "0.11"
tower = { version = "0.5" }
tower-http = { version = "0.6.2", features = ["cors"] }
toml = "0.8"
typed-builder = "0.21"
uuid = { version = "1.11", features = ["v4"] }
pretty-error-debug = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
serde_yaml = "0.9"
regex = "1.10"
cfg-if = "1.0"
nfsserve = "0.10"
intaglio = "1.10"
uzers = "0.12"
console = "0.15"
indicatif = "0.17"
jsonwebtoken = "9.3"
crossterm = { version = "0.29.0", features = ["events"] }
once_cell = "1.19"
tar = "0.4"
flate2 = "1.0"
oci-client = "0.15"
astral-tokio-tar = "0.5.6"
async-compression = "0.4"
serde_plain = "1.0"

[patch.crates-io]
oci-spec = { git = "ssh://git@github.com/youki-dev/oci-spec-rs.git" }
oci-client = { git = "ssh://git@github.com/toksdotdev/rust-oci-client.git", branch = "toks/string-impl-for-enums"}
