[package]
name = "microsandbox-cli"
description = "`microsandbox-cli` implements the CLI for managing microsandbox utilities."
authors.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "msb"
path = "bin/msb/main.rs"

[[bin]]
name = "msbrun"
path = "bin/msbrun.rs"

[[bin]]
name = "msbserver"
path = "bin/msbserver.rs"

[lib]
name = "microsandbox_cli"
path = "lib/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
console.workspace = true
microsandbox-core = { workspace = true, features = ["cli"] }
microsandbox-server = { workspace = true, features = ["cli"] }
microsandbox-utils = { workspace = true }
pretty-error-debug.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
typed-path.workspace = true
which.workspace = true

[dev-dependencies]
serial_test.workspace = true
