[package]
name = "microsandbox-core"
description = "`microsandbox-core` is a tool for managing lightweight sandboxes and images."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_core"
path = "lib/lib.rs"

[[test]]
name = "integration_cli"
path = "tests/cli/mod.rs"
harness = true

[dependencies]
anyhow.workspace = true
astral-tokio-tar.workspace = true
async-compression = { workspace = true, features = ["tokio", "gzip"] }
async-trait.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
dirs.workspace = true
flate2.workspace = true
futures.workspace = true
getset.workspace = true
hex.workspace = true
libc.workspace = true
oci-spec = { version = "0.8" }
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
typed-builder.workspace = true
typed-path.workspace = true
xattr.workspace = true
regex.workspace = true
psutil = "3.3.0"
nix = { workspace = true, features = [
    "mount",
    "user",
    "fs",
    "process",
    "term",
    "signal",
] }
walkdir = "2.4"
scopeguard = "1.2"
pretty-error-debug.workspace = true
serde_yaml.workspace = true
pin-project-lite = "0.2.15"
semver = { version = "1.0.24", features = ["serde"] }
ipnetwork = { version = "0.21.0", features = ["serde"] }
sqlx.workspace = true
microsandbox-utils.workspace = true
nondestructive = { version = "0.0.26", features = ["serde"] }
indicatif = { workspace = true, optional = true }
console.workspace = true
which = "7.0"
once_cell = "1.18"
oci-client = { workspace = true }
serde_plain.workspace = true


[dev-dependencies]
test-log.workspace = true

[features]
default = []
cli = ["indicatif"]
