[package]
name = "microsandbox-core"
description = "`microsandbox-core` is a tool for managing lightweight sandboxes and images."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_core"
path = "lib/lib.rs"

[[test]]
harness = true
name = "integration_cli"
path = "tests/cli/mod.rs"

[dependencies]
anyhow.workspace = true
astral-tokio-tar.workspace = true
async-compression = { workspace = true, features = ["gzip", "tokio"] }
async-trait.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
console.workspace = true
dirs.workspace = true
flate2.workspace = true
futures.workspace = true
getset.workspace = true
hex.workspace = true
indicatif = { workspace = true, optional = true }
ipnetwork.workspace = true
libc.workspace = true
microsandbox-utils.workspace = true
nix = { workspace = true, features = [
    "fs",
    "mount",
    "process",
    "signal",
    "term",
    "user",
] }
nondestructive.workspace = true
oci-client = { workspace = true }
oci-spec.workspace = true
once_cell.workspace = true
pin-project-lite.workspace = true
pretty-error-debug.workspace = true
psutil.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
scopeguard.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sqlx.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
typed-builder.workspace = true
typed-path.workspace = true
walkdir.workspace = true
which.workspace = true
xattr.workspace = true

[dev-dependencies]
test-log.workspace = true

[features]
cli = ["indicatif"]
default = []
