[package]
name = "microsandbox-portal"
description = "`microsandbox-portal` implements the side car program for executing code and commands in a microsandbox."
authors.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[[bin]]
name = "portal"
path = "bin/portal.rs"

[dependencies]
anyhow = { workspace = true }
async-trait.workspace = true
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true }
microsandbox-utils = { workspace = true }
rand.workspace = true
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true

[features]
default = []
nodejs = []
python = []

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
