[package]
name = "microsandbox-server"
description = "`microsandbox-server` implements the sandbox server responsible for orchestrating sandboxes."
authors.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
base64.workspace = true
chrono.workspace = true
console = { workspace = true, optional = true }
getset.workspace = true
indicatif = { workspace = true, optional = true }
jsonwebtoken.workspace = true
libc.workspace = true
microsandbox-core.workspace = true
microsandbox-utils.workspace = true
once_cell.workspace = true
pretty-error-debug.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true

[features]
cli = ["console", "indicatif"]
default = []
