[package]
name = "microsandbox-utils"
description = "`microsandbox-utils` is a library containing general utilities for the microsandbox project."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_utils"
path = "lib/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
console.workspace = true
dirs.workspace = true
futures.workspace = true
indicatif.workspace = true
libc.workspace = true
nix = { workspace = true, features = ["fs", "process", "signal", "term"] }
pretty-error-debug.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-path.workspace = true

[dev-dependencies]
tempfile.workspace = true
