[package]
name = "microsandbox-utils"
description = "`microsandbox-utils` is a library containing general utilities for the microsandbox project."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_utils"
path = "lib/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
console.workspace = true
dirs.workspace = true
futures.workspace = true
indicatif.workspace = true
keyring.workspace = true
libc.workspace = true
nix = { workspace = true, features = ["fs", "process", "signal", "term"] }
oci-client.workspace = true
pretty-error-debug.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-path.workspace = true

[dev-dependencies]
tempfile.workspace = true
