[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[project]
name = "microsandbox"
version = "0.1.17"
description = "Microsandbox Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "Microsandbox Team", email = "team@microsandbox.dev" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["aiohttp>=3.10.0,<3.11.0", "python-dotenv"]

[project.urls]
Homepage = "https://github.com/microsandbox/microsandbox/"
Repository = "https://github.com/microsandbox/microsandbox/"

[tool.setuptools]
packages = ["microsandbox"]

[tool.setuptools.package-dir]
"" = "."
