[package]
name = "microsandbox"
version = "0.1.2"
edition = "2024"
authors = ["Microsandbox Team <team@microsandbox.dev>"]
description = "Rust SDK for microsandbox - secure self-hosted sandboxes for your AI agents"
repository = "https://github.com/microsandbox/microsandbox"
license = "Apache-2.0"
readme = "README.md"
keywords = ["microsandbox", "sandbox", "security", "ai", "execution"]
categories = ["api-bindings", "virtualization"]
homepage = "https://microsandbox.dev"

[dependencies]
async-trait = "0.1"
dotenv = "0.15.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1.4", features = ["v4", "serde"] }
