[package]
name = "microsandbox"
version = "0.1.2"
authors = ["Microsandbox Team <team@microsandbox.dev>"]
categories = ["api-bindings", "virtualization"]
description = "Rust SDK for microsandbox - secure self-hosted sandboxes for your AI agents"
edition = "2024"
homepage = "https://microsandbox.dev"
keywords = ["ai", "execution", "microsandbox", "sandbox", "security"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/microsandbox/microsandbox"

[dependencies]
async-trait = "0.1"
dotenv = "0.15.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1.4", features = ["serde", "v4"] }
